made changes to color palette / trying to align things correctly

--- a/styles.css
+++ b/styles.css
@@ -2,63 +2,60 @@ html, body {
     margin: 0;
     height: 100%;
     box-sizing: border-box;
+    font-size: large;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: black;
-    background-size: 100% 100%;
-    background-repeat: repeat-y;
-    font-family: monospace;
-    padding: 0;
+    font-family: 'Open sans', sans-serif;
 }
+
+content {
+}
+
 
 ul {
     list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
 a {
     text-decoration: none;
+    color: black;
+}
+
+a:active {
+    color: white;
 }
 
 .link {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    gap: 40px;
-    background-color: rgb(128, 255, 128);
-    width: 320px;
+    justify-content: center;
+    background-color: #7EFF79;
     border-radius: 10px;
-    padding: 10px;
+    padding: 1em;
     margin: 15px;
-    color: black;
 }
 
 .pfp {
+    width: 6em;
+    height: 6em;
     border-radius: 100%;
-    height: 100px;
-    width: 100px;
+    box-shadow: 0px 2px 10px #A2ABAB;
+    margin-top: 20vh;
 }
 
 header {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 10px;
-    margin: 10px;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1em;
 }
 
-header > div {
+header > h1 {
     color: white;
-    background: gray;
-    padding: 0.1px 10px;
-    border-radius: 10px;
-
+    background: #7D869C;
+    padding: 0.1em 1em;
+    border-radius: 50px;
 }
